[gd_scene load_steps=10 format=2]

[ext_resource path="res://Script/CanvasLayer_store_cash.gd" type="Script" id=1]
[ext_resource path="res://assets/fundo preto.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Minecraftia-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/saldo_loja.png" type="Texture" id=4]
[ext_resource path="res://assets/saldo_store.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Button2" type="Button" parent="."]
show_behind_parent = true
margin_left = 923.0
margin_top = 203.0
margin_right = 973.0
margin_bottom = 239.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 1068.0
margin_top = 201.0
margin_right = 1235.0
margin_bottom = 237.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaldoLoja" type="Sprite" parent="Button"]
position = Vector2( 81, 17 )
scale = Vector2( 0.144395, 0.159884 )
texture = ExtResource( 4 )

[node name="FundoPreto" type="Sprite" parent="."]
visible = false
position = Vector2( 642, 360 )
scale = Vector2( 2.02187, 2.03333 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="InstructionsMoneyStore" type="Sprite" parent="."]
position = Vector2( 633, 363 )
scale = Vector2( 0.231132, 0.203735 )
texture = ExtResource( 5 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 425.0
margin_top = 338.0
margin_right = 674.0
margin_bottom = 383.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Dinheiro FÃ­sico: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
visible = false
margin_left = 424.0
margin_top = 399.0
margin_right = 688.0
margin_bottom = 444.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Dinheiro Virtual: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
visible = false
margin_left = 677.0
margin_top = 399.0
margin_right = 907.0
margin_bottom = 440.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
visible = false
margin_left = 670.0
margin_top = 337.0
margin_right = 909.0
margin_bottom = 381.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
